# notiondriver

./: .gitignore  README.md  pyproject.toml
examples/: execute.py  execute_sqlalchemy.py
src/notion_driver/: __init__.py  base.py  connection.py  driver.py
src/notion_driver/enums/: operator.py
src/notion_driver/errors/: database.py
src/notion_driver/ext/sqlalchemy/: connection.py  cursor.py  dialect.py  fake_dbapi.py
src/notion_driver/utils/: parse.py
